Updated with new pip installs/versions used

--- a/Working Directory/final-deliverables/TeamA22/software.html
+++ b/Working Directory/final-deliverables/TeamA22/software.html
@@ -24,7 +24,7 @@ p {font-family:Arial, serif;font-size:18px;font-style:normal;font-weight:normal;
 <br>
 Pip installs
 <ul>
-  <li>socket (version 1.0.0)</li>
+  <li>sockets (version 1.0.0)</li>
   <li>pickle-mixin (version 1.0.2)</li>
   <li>os (standard library)</li>
   <li>keyboard (version 0.13.5)</li>
@@ -40,6 +40,7 @@ Pip installs
   <li>numpy (version 1.22.3)</li>
   <li>argparse (version 1.4.0)</li>
   <li>gpiozero (version 1.6.2)</li>
+  <li>opencv-python (version 4.7.0.72)</li>
 </ul>
 
 <h3>Custom GCS Requirements</h3>
