--- a/Working Directory/final-deliverables/TeamA22/practicalProblems.html
+++ b/Working Directory/final-deliverables/TeamA22/practicalProblems.html
@@ -42,22 +42,39 @@ p {font-family:Arial, serif;font-size:16px;font-style:normal;font-weight:normal;
 <h3>Software Problems</h3>
 <p>
   1) GSD Calculation <br>
-  Due to our gimbal not functioning properly, the team resorted to doing the ground sampling distance math in our code.
+  2022 Team: Due to our gimbal not functioning properly, the team resorted to doing the ground sampling distance math in our code.
   This involved using the current drone coordinates, pitch, roll, and altitude to calculate the exact coordinate of the target.
   Due to a lack of testing, the calculation had some issues and some outlier coordinates were produced.
   With more time and testing, the calculation could have been improved.
+  <br>
+  2023 Team: Similarly to the 2022 Team, we faced unexpected and relatively last minute issues with getting the gimbal to work. We differed in our
+  corrective approaches. We chose to implement a centering function that would lower the drone over the target and ensure the tarp was again in the
+  center of the frame. While we got this working, we were unable to exhaustively test its reliability and would recommend either refining the GCS calculation
+  or further testing the centering calculation or a mixture of both.
 
   <br>
   <br>
   2) GCS Plotting Latency <br>
-  Once the GPS coordinate of the target was calculated, the coordinate was plotted on a scatterplot using Matplotlib.
+  2022 Team: Once the GPS coordinate of the target was calculated, the coordinate was plotted on a scatterplot using Matplotlib.
   This process however was time consuming and when multiple points were to be plotted, the GCS would experience some latency and we would have to wait for the GCS to populate before selecting a target to bomb.
+  <br>
+  2023 Team: We were fortunate to not encounter this issue.
 
   <br>
   <br>
   3) GCS Stalling <br>
-  There were a few time during a our tests where the amount of points being plotted at once would eventually stall the program, forcing a re-do of our test.
+  2022 Team: There were a few time during a our tests where the amount of points being plotted at once would eventually stall the program, forcing a re-do of our test.
   The keyboard inputs to our GCS would also sometimes cause a stall.
+  <br>
+  2023 Team: Our detection code worked well enough to only identify the one target on the screen, therefore multiple points being plotted was a moot point.
+  
+  <br>
+  <br>
+  4) Light Level/Calibration <br>
+  2023 Team: Using OpenCV, we found that the light levels often necessitated changing our detected color range from day-to-day. Generally, during the peak 
+  hours of the day this was anon-issue, but once it was close to sunset, the detection code became increasingly unreliable. We would recommend inplementing 
+  some sort of calibration image to send to the GCS to identify the targets color range. We did find that adding a Gaussian and Median Blur helped to mitigate this issue.
+  
 
 </p>
 </body>
