--- a/Working Directory/final-deliverables/TeamA22/problemDescription.html
+++ b/Working Directory/final-deliverables/TeamA22/problemDescription.html
@@ -85,6 +85,8 @@ multi-rotor UAV as well.
 There was a
 <a href="https://people.engr.ncsu.edu/mlsichit/Teaching/492/Project/OldAndNewProjects/OldProjects/Spring2018/AutonomousBomber/index.html">
   first iteration</a> at the project in 2018. Many things went well (plane flew well, the pixhawk was well setup, the code is decently commented, the release mechanism works well). Several things didn't work that well: the video detection was unreliable, the plane relied on wheels which worked very poorly at Dorothea Dix.
+ <br>
+ In Spring 2022, a team attempted this project. Unfortunately, they were unable to properly convert the coordinates of the detected ground object into GPS coordinates, and were unable to complete the project.
 
 
 <h3> Deliverables </h3>
