--- a/Working Directory/final-deliverables/TeamA22/index.html
+++ b/Working Directory/final-deliverables/TeamA22/index.html
@@ -16,13 +16,15 @@ p {font-family:Arial, serif;font-size:18px;font-style:normal;font-weight:normal;
 <h1>Autonomous Bomber</h1>
 <h3>Team Members</h3>
 <p>
-Ayush Luthra
+Dominique Barrera
 <br>
-Alex Wheelis
+Wesley Cowand
 <br>
-Kishan Joshi
+Amy Deepee
 <br>
-Harrison Tseng
+Victor Minin
+<br>
+Matt Parker
 </p>
 <h3>Links</h3>
 <p>
