--- a/Working Directory/final-deliverables/TeamA22/hardware.html
+++ b/Working Directory/final-deliverables/TeamA22/hardware.html
@@ -2,10 +2,28 @@
 <html>
 <head>
 	<title>Hardware Parts List</title>
+	<style>
+		table {
+			border-collapse: collapse;
+			width: 100%;
+		}
+
+		th, td {
+			text-align: left;
+			padding: 8px;
+			border-bottom: 1px solid #ddd;
+		}
+
+		th {
+			background-color: #f2f2f2;
+			border-top: 1px solid #ddd;
+			border-bottom: 2px solid #ddd;
+		}
+	</style>
 </head>
 <body>
 	<h1>Parts List</h1>
-	<table>
+	<table border="1">
 		<tr>
 			<th>Part Name</th>
 			<th>Cost</th>
@@ -34,9 +52,6 @@
 		<tr>
 			<td>Servo pushrods</td>
 			<td>Provided from old project</td>
-			<td><a href="https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2Caps%2C65&sr=8-5">https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2Caps%2C65&sr=8-5</a></td>
-		</tr>
-	</table>
-</body>
-</html>
+			<td><a href="https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2Caps%2C65&sr=8-5">https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2
+
 
