--- a/Working Directory/final-deliverables/TeamA22/hardware.html
+++ b/Working Directory/final-deliverables/TeamA22/hardware.html
@@ -6,24 +6,18 @@
 		table {
 			border-collapse: collapse;
 			width: 100%;
+			border: 1px solid black;
 		}
-
 		th, td {
 			text-align: left;
 			padding: 8px;
-			border-bottom: 1px solid #ddd;
-		}
-
-		th {
-			background-color: #f2f2f2;
-			border-top: 1px solid #ddd;
-			border-bottom: 2px solid #ddd;
+			border: 1px solid black;
 		}
 	</style>
 </head>
 <body>
 	<h1>Parts List</h1>
-	<table border="1">
+	<table>
 		<tr>
 			<th>Part Name</th>
 			<th>Cost</th>
@@ -52,6 +46,9 @@
 		<tr>
 			<td>Servo pushrods</td>
 			<td>Provided from old project</td>
-			<td><a href="https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2Caps%2C65&sr=8-5">https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2
-
+			<td><a href="https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2Caps%2C65&sr=8-5">https://www.amazon.com/Adjustable-Connector-Compatible-Replacement-Ltvystore/dp/B082CGZ7QD/ref=sr_1_5?keywords=servo+push+rod&qid=1651446226&sprefix=servo+push+%2Caps%2C65&sr=8-5</a></td>
+		</tr>
+	</table>
+</body>
+</html>
 
