added final report

--- a/TeamAutoBoom/index.html
+++ b/TeamAutoBoom/index.html
@@ -28,7 +28,7 @@ Matt Parker
 </p>
 <h3>Links</h3>
 <p>
-<a href="">Final Report</a>
+<a href="./Final Report.pdf">Final Report</a>
 <br>
 <a href="./problemDescription.html">Problem description</a>
 <br>
