--- a/TeamAutoBoom/hardware.html
+++ b/TeamAutoBoom/hardware.html
@@ -40,8 +40,8 @@
 		</tr>
 		<tr>
 			<td>Bomb release servo motor</td>
-			<td>Provided from old project</td>
-			<td><a href="https://www.amazon.com/Smraza-Helicopter-Airplane-Control-Arduino/dp/B07L2SF3R4/ref=sr_1_7?crid=3IAW01ZMQ0X0&keywords=servo&qid=1651446121&sprefix=servo+%2Caps%2C160&sr=8-7">https://www.amazon.com/Smraza-Helicopter-Airplane-Control-Arduino/dp/B07L2SF3R4/ref=sr_1_7?crid=3IAW01ZMQ0X0&keywords=servo&qid=1651446121&sprefix=servo+%2Caps%2C160&sr=8-7</a></td>
+			<td>Provided from lab</td>
+			<td>In the Lab</td>
 		</tr>
 		<tr>
 			<td>Servo pushrods</td>
