--- a/TeamAutoBoom/index.html
+++ b/TeamAutoBoom/index.html
@@ -37,6 +37,8 @@ Matt Parker
 <a href="./software.html">Software</a>
 <br>
 <a href="./hardware.html">Hardware</a>
+<br>
+<a href="https://www.youtube.com/watch?v=VIDEO_ID_HERE" target="_blank">Link to Video</a>
 </p>
 </body>
 </html>
