--- a/TeamAutoBoom/index.html
+++ b/TeamAutoBoom/index.html
@@ -38,7 +38,7 @@ Matt Parker
 <br>
 <a href="./hardware.html">Hardware</a>
 <br>
-<a href="https://drive.google.com/file/d/1p1Ll6VDY5-SLb5bEQn3xzDTAcfvvLh2q/view?usp=share_link" target="_blank">Link to Video</a>
+<a href="https://youtu.be/bO1n7KAG9LE" target="_blank">Link to Video</a>
   <br>
 </p>
 </body>
