--- a/TeamAutoBoom/software.html
+++ b/TeamAutoBoom/software.html
@@ -60,7 +60,7 @@ Pip installs
 </p>
 <h3>Software Links</h3>
 <p>
-<a href="https://github.ncsu.edu/aluthra/ECE592-Autonomous-Bomber">Github Repo</a>
+<a href="https://github.com/MattPark965/ECE592AutoBoom">Github Repo</a>
 <br>
 <a href="https://ardupilot.org/mavproxy/docs/getting_started/download_and_installation.html">MavProxy</a>
 <br>
